2010-03-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/data.cpp: Fix for PR#2889763 from Fabian -- make
	sure to check chain numbers as well -- or bond between chains!

2010-03-01  Noel O'Boyle

	* src/perception.cpp: Fixed error for perception of stereo from 2D for
	3 in-plane bond + one wedge/dash. Also unified code for the wedge and
	dash cases.
	* src/formats/mdlformat.cpp: Add support for writing of 2D
	stereochemistry. The wedges/dashes read from input (or otherwise
	calculated) will be used unless the 'w' option is given, in which case
	the tetstereo objects will be used to work out the wedges/dashes. This
	is required because the wedges/dashes often contain information beyond
	the stereochemistry and it would be unwise to just forget it.

2010-02-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/gaussformat.cpp: Fix crash with reading Gaussian
	files with only one geometry.

	* src/formats/CMakeLists.txt: Fix to allow compile of InChI with
	ops/unique.cpp correctly.

2010-02-28  Noel O'Boyle

	* test/testunique.py: Implement Chris' tests for --unique
	* test/files/dupset.smi: Remove file as these test cases are included
	in the Python script

2010-02-28  Chris Morley

	* src/ops/unique.cpp: Make header file for unordered_map
	conditional: <unordered_map> for MSVC; <tr1/unordered map>
	otherwise. 
	Simplify mesaage reporting duplicates.
	
	* test/files/dupset.smi; datafile for a test (but no test yet).
	 
2010-02-27  Noel O'Boyle

	* test/CMakelists.txt, test/testfastsearch.py, test/testbabel.py:
	Added a new test for fastsearch functionality plus some convenience
	methods.

2010-02-27  Chris Morley
	
	* include/openbabel/base.h: Make GetTitle() and SetTitle() virtual
	  but do nothing in base class. Avoids the need for dynamic_casts
	  when OBBase* pointers are used in ops, etc.

	* src/formats/inchiformat.cpp, include/openbabel/inchiformat.h:
	  remove (unused) testformat and move declarations to a header